Replace hard-coded strings with constants

--- a/csharp/GildedRose.csproj
+++ b/csharp/GildedRose.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="GildedRose.cs" />
     <Compile Include="GildedRoseTest.cs" />
+    <Compile Include="GoldMasterTest.cs" />
     <Compile Include="ItemBuilder.cs" />
     <Compile Include="Program.cs" />
   </ItemGroup>
